--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "react-google-books",
+  "name": "react-news-scrape",
   "version": "1.0.0",
+  "homepage": "http://apekearo.github.io/ReactNewsScrape",
   "description": "",
   "main": "server.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
@@ -16,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "gh-pages": "^2.0.1",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
